--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class = "site-header">
     <div class = "container">
-      <h1 class = "brand"> <img src="images/FPT Polytechnic.png" alt="FPT Polytechnic" width="35%"> 
+      <h1 class = "brand"> <img src="images/fpt-polytechnic.png" alt="fpt-polytechnic" width="35%"> 
       </h1>
       <nav class = "nav">
         <a href="Items.html">Vật Phẩm</a>
@@ -123,3 +123,4 @@ allowfullscreen>
 
 </body>
 </html>
+
