--- a/Bees.html
+++ b/Bees.html
@@ -13,7 +13,7 @@
     <div class = "container">
       <h1 class="brand">
         <a href="ASM.html">
-        <img src="images/FPT Polytechnic.png" alt="FPT Polytechnic" width="35%">
+        <img src="images/fpt-polytechnic.png" alt="fpt-polytechnic" width="35%">
         </a>
     </h1>
 
@@ -43,35 +43,35 @@
 
       <tbody>
         <tr>
-          <td><img src="images/Basic Bee.png" alt="Basic Bee"></td>
+          <td><img src="images/basic-bee.png" alt="basic-bee"></td>
           <td>Basic Bee</td>
           <td>Thường</td>
           <td>Tăng lượng phấn thu thập</td>
         </tr>
 
         <tr>
-          <td><img src="images/Brave Bee.jpg" alt="Brave Bee"></td>
+          <td><img src="images/brave-bee.jpg" alt="brave-bee"></td>
           <td>Brave Bee</td>
           <td>Hiếm</td>
           <td>Tăng sát thương</td>
         </tr>
 
         <tr>
-          <td><img src="images/Bubble Bee.jpg" alt="Bubble Bee"></td>
+          <td><img src="images/bubble-bee.jpg" alt="bubble-bee"></td>
           <td>Bubble Bee</td>
           <td>Hiếm</td>
           <td>Tạo bong bóng thu thập phấn xanh</td>
         </tr>
 
         <tr>
-          <td><img src="images/Music Bee.jpg" alt="Music Bee"></td>
+          <td><img src="images/music-bee.jpg" alt="music-bee"></td>
           <td>Music Bee</td>
           <td>Huyền thoại</td>
           <td>Tăng tốc độ di chuyển & thu thập</td>
         </tr>
 
         <tr>
-          <td><img src="images/Vicious Bee.jpg" alt="Vicious Bee"></td>
+          <td><img src="images/vicious-bee.jpg" alt="vicious-bee"></td>
           <td>Vicious Bee</td>
           <td>Sự kiện</td>
           <td>Gây sát thương mạnh lên quái</td>
