--- a/Items.html
+++ b/Items.html
@@ -12,7 +12,7 @@
     <div class = "container">
       <h1 class="brand">
   <a href="ASM.html">
-    <img src="images/FPT Polytechnic.png" alt="FPT Polytechnic" width="35%">
+    <img src="images/fpt-polytechnic.png" alt="fpt-polytechnic" width="35%">
   </a>
 </h1>
 
@@ -55,7 +55,7 @@
         </tr>
 
         <tr>
-          <td><img src="images/Royal Jelly.jpg" alt="Royal Jelly"></td>
+          <td><img src="images/royal-jelly.jpg" alt="royal-jelly"></td>
           <td>Royal Jelly</td>
           <td>Vật phẩm</td>
           <td>Thay đổi loại ong ngẫu nhiên</td>
@@ -69,7 +69,7 @@
         </tr>
 
         <tr>
-          <td><img src="images/Star Jelly.jpg" alt="Star Jelly"></td>
+          <td><img src="images/star-jelly.jpg" alt="star-jelly"></td>
           <td>Star Jelly</td>
           <td>Vật phẩm hiếm</td>
           <td>Biến ong thành ong hiếm hoặc ong sự kiện</td>
