--- a/Blue.html
+++ b/Blue.html
@@ -12,7 +12,7 @@
     <div class = "container">
      <h1 class="brand">
         <a href="ASM.html">
-        <img src="images/FPT Polytechnic.png" alt="FPT Polytechnic" width="35%">
+        <img src="images/fpt-polytechnic.png" alt="fpt-polytechnic" width="35%">
         </a>
     </h1>
       <nav class = "nav">
