--- a/Blue.html
+++ b/Blue.html
@@ -42,19 +42,19 @@
   <!-- Gear -->
   <tr>
     <td rowspan="4">Gear</td>
-    <td><img src="images/Bubble Mask.jpg" class="item-img"></td>
+    <td><img src="images/bubble-mask.jpg" class="item-img"></td>
     <td>Bubble Mask</td>
     <td>Blue Boost, Bubble</td>
   </tr>
 
   <tr>
-    <td><img src="images/Diamond Mask.jpg" class="item-img"></td>
+    <td><img src="images/diamond-mask.jpg" class="item-img"></td>
     <td>Diamond Mask</td>
     <td>Blue Pollen, Convert Rate</td>
   </tr>
 
   <tr>
-    <td><img src="images/Coconut Clogs.jpg" class="item-img"></td>
+    <td><img src="images/coconut-clogs.jpg" class="item-img"></td>
     <td>Coconut Clogs</td>
     <td>Speed, Jump Power</td>
   </tr>
@@ -68,7 +68,7 @@
   <!-- SSA -->
   <tr>
     <td rowspan="2">SSA</td>
-    <td><img src="images/SSA star.jpg" class="item-img"></td>
+    <td><img src="images/ssa-star.jpg" class="item-img"></td>
     <td>Supreme Star Amulet</td>
     <td>Pop Star ⭐</td>
   </tr>
@@ -86,25 +86,25 @@
   <!-- Bees -->
   <tr>
     <td rowspan="4">Bees</td>
-    <td><img src="images/Tadpole Bee.jpg" class="item-img"></td>
+    <td><img src="images/tadpole-bee.jpg" class="item-img"></td>
     <td>Tadpole Bee</td>
     <td>Bubble • Baby Love</td>
   </tr>
 
   <tr>
-    <td><img src="images/Buoyant Bee.jpg" class="item-img"></td>
+    <td><img src="images/buoyant-bee.jpg" class="item-img"></td>
     <td>Buoyant Bee</td>
     <td>Balloon • Capacity</td>
   </tr>
 
   <tr>
-    <td><img src="images/Diamond Bee.jpg" class="item-img"></td>
+    <td><img src="images/diamond-bee.jpg" class="item-img"></td>
     <td>Diamond Bee</td>
     <td>Blue Boost</td>
   </tr>
 
   <tr>
-    <td><img src="images/Music Bee.jpg" class="item-img"></td>
+    <td><img src="images/music-bee.jpg" class="item-img"></td>
     <td>Music Bee</td>
     <td>Melody • Focus</td>
   </tr>
@@ -118,3 +118,4 @@
 
 </body>
 </html>
+
