--- a/Items.html
+++ b/Items.html
@@ -62,7 +62,7 @@
         </tr>
 
         <tr>
-          <td><img src="images/Glue.jpg" alt="Glue"></td>
+          <td><img src="images/Glue.JPG" alt="Glue"></td>
           <td>Glue</td>
           <td>Nguyên liệu</td>
           <td>Dùng để chế tạo trang bị</td>
@@ -85,4 +85,5 @@
       </div>
 </footer>
 </body>
+
 </html>
