Bees.html Blue.html Items.html

--- a/Blue.html
+++ b/Blue.html
@@ -11,7 +11,7 @@
     <header class = "site-header">
     <div class = "container">
      <h1 class="brand">
-        <a href="ASM.html">
+        <a href="index.html">
         <img src="images/fpt-polytechnic.png" alt="fpt-polytechnic" width="35%">
         </a>
     </h1>
