--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>ASM</title>
+  <title>ASM_Wiki Bee Swarm</title>
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="ASMstyles.css">
 </head>
