--- a/Items.html
+++ b/Items.html
@@ -62,7 +62,7 @@
         </tr>
 
         <tr>
-          <td><img src="images/glue.jpg" alt="Glue"></td>
+          <td><img src="images/Glue.jpg" alt="Glue"></td>
           <td>Glue</td>
           <td>Nguyên liệu</td>
           <td>Dùng để chế tạo trang bị</td>
