--- a/Blue.html
+++ b/Blue.html
@@ -42,7 +42,7 @@
   <!-- Gear -->
   <tr>
     <td rowspan="4">Gear</td>
-    <td><img src="images/bubble-ask.jpg" class="item-img"></td>
+    <td><img src="images/bubble-mask.jpg" class="item-img"></td>
     <td>Bubble Mask</td>
     <td>Blue Boost, Bubble</td>
   </tr>
@@ -118,4 +118,5 @@
 
 </body>
 </html>
+
 
