--- a/Blue.html
+++ b/Blue.html
@@ -48,13 +48,13 @@
   </tr>
 
   <tr>
-    <td><img src="/images/diamond-mask.jpg" class="item-img"></td>
+    <td><img src="images/diamond-mask.jpg" class="item-img"></td>
     <td>Diamond Mask</td>
     <td>Blue Pollen, Convert Rate</td>
   </tr>
 
   <tr>
-    <td><img src="/images/coconut-clogs.jpg" class="item-img"></td>
+    <td><img src="images/coconut-clogs.jpg" class="item-img"></td>
     <td>Coconut Clogs</td>
     <td>Speed, Jump Power</td>
   </tr>
@@ -74,7 +74,7 @@
   </tr>
 
   <tr>
-    <td><img src="/images/ssa-star-blue.jpg" class="item-img"></td>
+    <td><img src="images/ssa-star-blue.jpg" class="item-img"></td>
     <td>SSA Stats</td>
     <td>
       +Blue Pollen<br>
@@ -86,25 +86,25 @@
   <!-- Bees -->
   <tr>
     <td rowspan="4">Bees</td>
-    <td><img src="/images/tadpole-bee.jpg" class="item-img"></td>
+    <td><img src="images/tadpole-bee.jpg" class="item-img"></td>
     <td>Tadpole Bee</td>
     <td>Bubble • Baby Love</td>
   </tr>
 
   <tr>
-    <td><img src="/images/buoyant-bee.jpg" class="item-img"></td>
+    <td><img src="images/buoyant-bee.jpg" class="item-img"></td>
     <td>Buoyant Bee</td>
     <td>Balloon • Capacity</td>
   </tr>
 
   <tr>
-    <td><img src="/images/diamond-bee.jpg" class="item-img"></td>
+    <td><img src="images/diamond-bee.jpg" class="item-img"></td>
     <td>Diamond Bee</td>
     <td>Blue Boost</td>
   </tr>
 
   <tr>
-    <td><img src="/images/music-bee.jpg" class="item-img"></td>
+    <td><img src="images/music-bee.jpg" class="item-img"></td>
     <td>Music Bee</td>
     <td>Melody • Focus</td>
   </tr>
@@ -118,6 +118,7 @@
 
 </body>
 </html>
+
 
 
 
