--- a/Blue.html
+++ b/Blue.html
@@ -86,8 +86,8 @@
   <!-- Bees -->
   <tr>
     <td rowspan="4">Bees</td>
-    <td><img src="/images/tadpola-bee.jpg" class="item-img"></td>
-    <td>Tadpole Bee</td>
+    <td><img src="images/tadpola-bee.jpg" class="item-img"></td>
+    <td>Tadpola Bee</td>
     <td>Bubble • Baby Love</td>
   </tr>
 
@@ -118,6 +118,7 @@
 
 </body>
 </html>
+
 
 
 
