--- a/Red.html
+++ b/Red.html
@@ -22,7 +22,7 @@
       <a href="Items.html">Vật Phẩm</a>
       <a href="Bees.html">Ong</a>
       <a href="Blue.html">Team Blue</a>
-      <a href="Red.html" class="active">Team Red</a>
+      <a href="Red.html">Team Red</a>
       <a href="White.html">Team White</a>
     </nav>
   </div>
@@ -117,3 +117,4 @@
 
 </body>
 </html>
+
