--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="Items.html">Vật Phẩm</a>
         <a href="Bees.html">Ong</a>
         <a href="Blue.html">Team Blue</a>
-        <a href="Red.hmtl">Team Red</a>
+        <a href="Red.html">Team Red</a>
         <a href="White.html">Team White</a>
       </nav>
     </div>
@@ -123,3 +123,4 @@ allowfullscreen>
 
 </body>
 </html>
+
