--- a/Blue.html
+++ b/Blue.html
@@ -65,6 +65,27 @@
     <td>Huge Capacity, Convert</td>
   </tr>
 
+      <!-- Weapons -->
+<tr>
+  <td rowspan="3">Weapon</td>
+  <td><img src="images/tide-pop.jpg" class="item-img"></td>
+  <td>Tide Popper</td>
+  <td>Blue Pollen • Bubble • Convert</td>
+</tr>
+
+<tr>
+  <td><img src="images/dark-scythe.jpg" class="item-img"></td>
+  <td>Dark Scythe</td>
+  <td>Mixed Damage • Utility</td>
+</tr>
+
+<tr>
+  <td><img src="images/gummyballer.jpg" class="item-img"></td>
+  <td>Gummyballer</td>
+  <td>Goo • Convert Rate</td>
+</tr>
+
+
   <!-- SSA -->
   <tr>
     <td rowspan="2">SSA</td>
@@ -118,6 +139,7 @@
 
 </body>
 </html>
+
 
 
 
