--- a/Red.html
+++ b/Red.html
@@ -45,13 +45,13 @@
       <!-- Gear -->
       <tr>
         <td rowspan="4">Gear</td>
-        <td><img src="/images/demon-mask.jpg" class="item-img"></td>
+        <td><img src="images/demon-mask.jpg" class="item-img"></td>
         <td>Demon Mask</td>
         <td>Red Boost, Flame</td>
       </tr>
 
       <tr>
-        <td><img src="/images/fire-mask.jpg" class="item-img"></td>
+        <td><img src="images/fire-mask.jpg" class="item-img"></td>
         <td>Fire Mask</td>
         <td>Red Pollen, Flame</td>
       </tr>
@@ -71,13 +71,13 @@
       <!-- SSA -->
       <tr>
         <td rowspan="2">SSA</td>
-        <td><img src="/images/ssa-star.jpg" class="item-img"></td>
+        <td><img src="images/ssa-star.jpg" class="item-img"></td>
         <td>Supreme Star Amulet</td>
         <td>Scorching Star 🔥</td>
       </tr>
 
       <tr>
-        <td><img src="/images/ssa-star-red.png" class="item-img"></td>
+        <td><img src="images/ssa-star-red.png" class="item-img"></td>
         <td>SSA Stats</td>
         <td>
           +Red Pollen<br>
@@ -89,19 +89,19 @@
       <!-- Bees -->
       <tr>
         <td rowspan="4">Bees</td>
-        <td><img src="/images/spicy-bee.jpg" class="item-img"></td>
+        <td><img src="images/spicy-bee.jpg" class="item-img"></td>
         <td>Spicy Bee</td>
         <td>Flame • Inferno</td>
       </tr>
 
       <tr>
-        <td><img src="/images/precise-bee.jpg" class="item-img"></td>
+        <td><img src="images/precise-bee.jpg" class="item-img"></td>
         <td>Precise Bee</td>
         <td>Super Crit</td>
       </tr>
 
       <tr>
-        <td><img src="/images/demon-bee.jpg" class="item-img"></td>
+        <td><img src="images/demon-bee.jpg" class="item-img"></td>
         <td>Demon Bee</td>
         <td>Attack • Flame</td>
       </tr>
@@ -117,5 +117,6 @@
 
 </body>
 </html>
+
 
 
