--- a/Red.html
+++ b/Red.html
@@ -71,7 +71,7 @@
       <!-- SSA -->
       <tr>
         <td rowspan="2">SSA</td>
-        <td><img src="images/ssa-star.jpg" class="item-img"></td>
+        <td><img src="/images/ssa-star.jpg" class="item-img"></td>
         <td>Supreme Star Amulet</td>
         <td>Scorching Star 🔥</td>
       </tr>
@@ -117,6 +117,7 @@
 
 </body>
 </html>
+
 
 
 
