--- a/Bees.html
+++ b/Bees.html
@@ -21,7 +21,7 @@
         <a href="Items.html">Vật Phẩm</a>
         <a href="Bees.html">Ong</a>
         <a href="Blue.html">Team Blue</a>
-        <a href="Red.hmtl">Team Red</a>
+        <a href="Red.html">Team Red</a>
         <a href="White.html">Team White</a>
       </nav>
     </div>
@@ -91,3 +91,4 @@
 
 </body>
 </html>
+
