--- a/Blue.html
+++ b/Blue.html
@@ -19,7 +19,7 @@
         <a href="Items.html">Vật Phẩm</a>
         <a href="Bees.html">Ong</a>
         <a href="Blue.html">Team Blue</a>
-        <a href="Red.hmtl">Team Red</a>
+        <a href="Red.html">Team Red</a>
         <a href="White.html">Team White</a>
       </nav>
     </div>
@@ -118,6 +118,7 @@
 
 </body>
 </html>
+
 
 
 
