--- a/white.html
+++ b/white.html
@@ -21,9 +21,9 @@
     <nav class="nav">
       <a href="Items.html">Vật Phẩm</a>
       <a href="Bees.html">Ong</a>
-      <a href="Blue.html">Team Blue</a>
-      <a href="Red.html">Team Red</a>
-      <a href="White.html" class="active">Team White</a>
+      <a href="blue.html">Team Blue</a>
+      <a href="red.html">Team Red</a>
+      <a href="white.html" class="active">Team White</a>
     </nav>
   </div>
 </header>
@@ -117,3 +117,4 @@
 
 </body>
 </html>
+
