--- a/red.html
+++ b/red.html
@@ -21,9 +21,9 @@
     <nav class="nav">
       <a href="Items.html">Vật Phẩm</a>
       <a href="Bees.html">Ong</a>
-      <a href="Blue.html">Team Blue</a>
-      <a href="Red.html">Team Red</a>
-      <a href="White.html">Team White</a>
+      <a href="blue.html">Team Blue</a>
+      <a href="red.html">Team Red</a>
+      <a href="white.html">Team White</a>
     </nav>
   </div>
 </header>
@@ -117,6 +117,7 @@
 
 </body>
 </html>
+
 
 
 
