--- a/Items.html
+++ b/Items.html
@@ -19,9 +19,9 @@
       <nav class = "nav">
         <a href="Items.html">Vật Phẩm</a>
         <a href="Bees.html">Ong</a>
-        <a href="#Blue">Team Blue</a>
-        <a href="#Red">Team Red</a>
-        <a href="#White">Team White</a>
+        <a href="blue.html">Team Blue</a>
+        <a href="red.html">Team Red</a>
+        <a href="white.html">Team White</a>
       </nav>
     </div>
   </header>
@@ -87,4 +87,5 @@
 </body>
 
 </html>
+
 
