--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <nav class = "nav">
         <a href="Items.html">Vật Phẩm</a>
         <a href="Bees.html">Ong</a>
-        <a href="Blue.html">Team Blue</a>
-        <a href="Red.html">Team Red</a>
-        <a href="White.html">Team White</a>
+        <a href="blue.html">Team Blue</a>
+        <a href="red.html">Team Red</a>
+        <a href="white.html">Team White</a>
       </nav>
     </div>
   </header>
@@ -123,4 +123,5 @@ allowfullscreen>
 
 </body>
 </html>
+
 
