--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ allowfullscreen>
 
 
 <footer class="site-footer">
-      <div class="container">
+      <div class="container footer-flex">
         <div class="footer-info">
         <p>© Nguyễn Minh Tiến</p>
         <p>633 Lê Trọng Tấn, Q. Bình Tân</p>
@@ -131,6 +131,7 @@ allowfullscreen>
 
 </body>
 </html>
+
 
 
 
