--- a/Bees.html
+++ b/Bees.html
@@ -20,9 +20,9 @@
       <nav class = "nav">
         <a href="Items.html">Vật Phẩm</a>
         <a href="Bees.html">Ong</a>
-        <a href="blue.html">Team Blue</a>
-        <a href="red.html">Team Red</a>
-        <a href="white.html">Team White</a>
+        <a href="./pages/blue.html">Team Blue</a>
+        <a href="./pages/red.html">Team Red</a>
+        <a href="./pages/white.html">Team White</a>
       </nav>
     </div>
   </header>
@@ -91,6 +91,7 @@
 
 </body>
 </html>
+
 
 
 
