--- a/items.html
+++ b/items.html
@@ -17,8 +17,8 @@
 </h1>
 
       <nav class = "nav">
-        <a href="Items.html">Vật Phẩm</a>
-        <a href="Bees.html">Ong</a>
+        <a href="items.html">Vật Phẩm</a>
+        <a href="bees.html">Ong</a>
         <a href="blue.html">Team Blue</a>
         <a href="red.html">Team Red</a>
         <a href="white.html">Team White</a>
@@ -87,5 +87,6 @@
 </body>
 
 </html>
+
 
 
