--- a/bees.html
+++ b/bees.html
@@ -18,8 +18,8 @@
     </h1>
 
       <nav class = "nav">
-        <a href="Items.html">Vật Phẩm</a>
-        <a href="Bees.html">Ong</a>
+        <a href="items.html">Vật Phẩm</a>
+        <a href="bees.html">Ong</a>
         <a href="blue.html">Team Blue</a>
         <a href="red.html">Team Red</a>
         <a href="white.html">Team White</a>
@@ -91,6 +91,7 @@
 
 </body>
 </html>
+
 
 
 
