--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class = "brand"> <img src="images/fpt-polytechnic.png" alt="fpt-polytechnic" width="35%"> 
       </h1>
       <nav class = "nav">
-        <a href="Items.html">Vật Phẩm</a>
-        <a href="Bees.html">Ong</a>
+        <a href="items.html">Vật Phẩm</a>
+        <a href="bees.html">Ong</a>
         <a href="blue.html">Team Blue</a>
         <a href="red.html">Team Red</a>
         <a href="white.html">Team White</a>
@@ -139,6 +139,7 @@ allowfullscreen>
 
 </body>
 </html>
+
 
 
 
