--- a/white.html
+++ b/white.html
@@ -19,8 +19,8 @@
     </h1>
 
     <nav class="nav">
-      <a href="Items.html">Vật Phẩm</a>
-      <a href="Bees.html">Ong</a>
+      <a href="items.html">Vật Phẩm</a>
+      <a href="bees.html">Ong</a>
       <a href="blue.html">Team Blue</a>
       <a href="red.html">Team Red</a>
       <a href="white.html" class="active">Team White</a>
@@ -117,4 +117,5 @@
 
 </body>
 </html>
+
 
