--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
 <!-- ===== MENU TEAM ===== -->
 <section class="table-3">
 
-  <a href="Blue.html" class="card team blue">
+  <a href="blue.html" class="card team blue">
     <div class="card-content">
       <h3>Blue Team</h3>
       <p>Thu thập phấn xanh, farm ổn định</p>
     </div>
   </a>
 
-  <a href="Red.html" class="card team red">
+  <a href="red.html" class="card team red">
     <div class="card-content">
       <h3>Red Team</h3>
       <p>Sát thương cao, farm nhanh</p>
     </div>
   </a>
 
-  <a href="White.html" class="card team white">
+  <a href="white.html" class="card team white">
     <div class="card-content">
       <h3>White Team</h3>
       <p>Cân bằng – linh hoạt mọi lối chơi</p>
@@ -139,6 +139,7 @@ allowfullscreen>
 
 </body>
 </html>
+
 
 
 
