--- a/blue.html
+++ b/blue.html
@@ -68,7 +68,7 @@
   <!-- SSA -->
   <tr>
     <td rowspan="2">SSA</td>
-    <td><img src="images/SSA star.jpg" class="item-img"></td>
+    <td><img src="images/ssa-star.jpg" class="item-img"></td>
     <td>Supreme Star Amulet</td>
     <td>Pop Star ⭐</td>
   </tr>
@@ -118,6 +118,7 @@
 
 </body>
 </html>
+
 
 
 
